# mini_vector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Vector.h
src/: main.cpp
